Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-11771

bad output in target_handle_reconnect: Recovery already passed deadline 71578:57

XMLWordPrintable

    • 3
    • 9223372036854775807

      In functions target_handle_reconnect and target_handle_connect I've found incorrect using of linux kernel time types.

             now = ktime_get_seconds();
              deadline = jiffies_to_msecs(target->obd_recovery_timer.expires) /
                         MSEC_PER_SEC; 

      Comparing jiffies converted to seconds and seconds from CLOCK_MONOTONIC is incorrect.
      jiffies converted to seconds should be used Instead of ktime_get_seconds.
      In this way we can avoid wrong timeouts in warnings and incorrect timeouts comparing.

      2018-07-31 18:51:46 [ 8201.235800] Lustre: fs1-OST0000: Recovery already passed deadline 71578:57. If you do not want to wait more, please abort the recovery by force.
      ...
      2018-07-31 18:51:46 [ 8201.236177] Lustre: fs1-OST0000: Denying connection for new client 71f8ec29-a676-0a96-3d1d-97b43c72e168(at 172.18.1.101@o2ib), waiting for 13 known clients (1 recovered, 11 in progress, and 1 evicted) to recover in 71578:57

            simmonsja James A Simmons
            scherementsev Sergey Cheremencev
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: